<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>lab3</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QHBoxLayout" name="horizontalLayout" stretch="5,4">
    <property name="spacing">
     <number>30</number>
    </property>
    <item>
     <widget class="QGraphicsView" name="graphicsView"/>
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
         <string>β (вес видимости)</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item row="3" column="1">
       <widget class="QDoubleSpinBox" name="rhoSpinBox">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="maximum">
         <double>1.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>0.050000000000000</double>
        </property>
        <property name="value">
         <double>0.980000000000000</double>
        </property>
       </widget>
      </item>
      <item row="4" column="1">
       <widget class="QDoubleSpinBox" name="tau0SpinBox">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="maximum">
         <double>100.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>1.000000000000000</double>
        </property>
        <property name="value">
         <double>1.000000000000000</double>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QSpinBox" name="alphaSpinBox">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="maximum">
         <number>100</number>
        </property>
        <property name="value">
         <number>1</number>
        </property>
       </widget>
      </item>
      <item row="5" column="0">
       <widget class="QLabel" name="label_6">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
         <string>Количество итераций</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item row="4" column="0">
       <widget class="QLabel" name="label_5">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
         <string>τ0 (начальное количество феромона)</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item row="3" column="0">
       <widget class="QLabel" name="label_4">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
         <string>ρ (коэффициент испарения феромона)</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item row="6" column="1">
       <widget class="QPushButton" name="solveButton">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
         <string>Решить</string>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
         <string>α (вес феромона)</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item row="5" column="1">
       <widget class="QSpinBox" name="numIterationSpinBox">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="maximum">
         <number>10000</number>
        </property>
        <property name="singleStep">
         <number>10</number>
        </property>
        <property name="value">
         <number>100</number>
        </property>
       </widget>
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
         <string>Количество вершин</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
       <widget class="QSpinBox" name="betaSpinBox">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="maximum">
         <number>100</number>
        </property>
        <property name="value">
         <number>1</number>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QSpinBox" name="numVerticesSpinBox">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="maximum">
         <number>100</number>
        </property>
        <property name="value">
         <number>20</number>
        </property>
       </widget>
      </item>
      <item row="6" column="0">
       <widget class="QPushButton" name="regenerateButton">
        <property name="font">
         <font>
          <family>Source Code Pro Light</family>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
         <string>Повторная генерация графа</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>22</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
